using selectors in jquery and overwriting css with them

--- a/events.html
+++ b/events.html
@@ -1,119 +1,139 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="utf-8" />
-    <meta name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
-    <title> doc </title>
-    <script src="js/jquery.js"></script>
-    <script>
-        $("document").ready(function(){
+<head lang="en">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-          // $("#textBox").on("click", whenMouseIsClicked)
-          // $('#textBox').on("mouseleave", whenMouseLeaves)
+  <title> doc </title>
+  <script src="js/jquery.js"></script>
+  <script>
+    $("document").ready(function () {
 
-          // function whenMouseIsClicked(){
-          //   $("#textBox").html("<h1> was clicked </h1>")
-          // }
-          // function whenMouseLeaves(){
-          //   $("#textBox").html("<h1> mouse left </h1>")
-          // }
+      // $("#textBox").on("click", whenMouseIsClicked)
+      // $('#textBox').on("mouseleave", whenMouseLeaves)
 
-          //   $("#show").on("click", function(){
-          //     $("#textBox").show()
-          //   })
-          //   $("#hide").on("click", function(){
-          //     $("#textBox").hide()
-          //   })
+      // function whenMouseIsClicked(){
+      //   $("#textBox").html("<h1> was clicked </h1>")
+      // }
+      // function whenMouseLeaves(){
+      //   $("#textBox").html("<h1> mouse left </h1>")
+      // }
 
-            // $(".textCopy").hover(highlightCopy)
+      //   $("#show").on("click", function(){
+      //     $("#textBox").show()
+      //   })
+      //   $("#hide").on("click", function(){
+      //     $("#textBox").hide()
+      //   })
 
-            // function highlightCopy() {
+      // $(".textCopy").hover(highlightCopy)
 
-            //   $(this).toggleClass("highlight")
-            // }
+      // function highlightCopy() {
 
-            // $("#fade-in").on("click", function() {
-            //   $("#textBox").fadeIn(3000, function(){
+      //   $(this).toggleClass("highlight")
+      // }
 
-            //     alert("I'm Done fading in")
-            //   })
-            // })
+      // $("#fade-in").on("click", function() {
+      //   $("#textBox").fadeIn(3000, function(){
 
-            // $("#fade-out").on("click", function() {
-            //   $("#textBox").fadeOut("fast", function(){
+      //     alert("I'm Done fading in")
+      //   })
+      // })
 
-            //     alert("I'm Done Fading out")
-            //   })
-            // })
+      // $("#fade-out").on("click", function() {
+      //   $("#textBox").fadeOut("fast", function(){
 
-            // $("#slide-up").click(function(){
-            //   $("#textBox").slideUp("2000", "linear")
-            // })
+      //     alert("I'm Done Fading out")
+      //   })
+      // })
 
-            // $("#slide-down").click(function(){
-            //   $("#textBox").slideDown("fast", "linear")
-            // })
+      // $("#slide-up").click(function(){
+      //   $("#textBox").slideUp("2000", "linear")
+      // })
 
-            // $("#toggle-slide").click(function(){
-            //   $("#textBox").slideToggle("fast", function(){
-            //     alert("Done")
-            //   })
-            // })
+      // $("#slide-down").click(function(){
+      //   $("#textBox").slideDown("fast", "linear")
+      // })
 
-            // $("#toggleMe").click(function(){
+      // $("#toggle-slide").click(function(){
+      //   $("#textBox").slideToggle("fast", function(){
+      //     alert("Done")
+      //   })
+      // })
 
-            //   $("#textBox").toggle(1000, "swing")
+      // $("#toggleMe").click(function(){
 
-            // })
+      //   $("#textBox").toggle(1000, "swing")
 
-            $("#grow").click(function(){
+      // })
 
-              $("#textBox").animate({ width: "500px" }, 2000)
-            })
+      // $("#grow").click(function(){
 
-            $("#move").click(function(){
+      //   $("#textBox").animate({ width: "500px" }, 2000)
+      // })
 
-              $("#textBox").animate({ marginLeft: "200px" }, 2000)
-            })
+      // $("#move").click(function(){
 
-            $("#bigger").click(function(){
+      //   $("#textBox").animate({ marginLeft: "200px" }, 2000)
+      // })
 
-              $("#textBox").animate({ fontSize: "25px" }, 1000)
-            })
+      // $("#bigger").click(function(){
 
-            $("#many").click(function(){
+      //   $("#textBox").animate({ fontSize: "25px" }, 1000)
+      // })
 
-              $("#textBox").animate({ fontSize: "40px", backgroundColor: "red", marginLeft: "300px;", width: "600px" }, 2000)
-            })
-        })
-    </script>
+      // $("#many").click(function(){
 
-    <style>
-      #textBox{
-        width: 250px;
-        background-color: red;
-        height: 150px;
-        margin-top: 50px;
-        position: absolute;
-     }
-  /* 
+      //   $("#textBox").animate({ fontSize: "40px", backgroundColor: "red", marginLeft: "300px;", width: "600px" }, 2000)
+      // })
+
+      $("p").css("border", "3px solid red")
+
+      $("#headerTop").css("border", "1px dotted blue")
+
+      $("#greenBorder").css("border", "2px dashed green")
+    })
+  </script>
+
+  <style>
+    /* #textBox {
+      width: 250px;
+      background-color: red;
+      height: 150px;
+      margin-top: 50px;
+      position: absolute;
+    } */
+
+    /* 
       .highlight {
         background: red;
       } */
+  </style>
+</head>
 
-    </style>
-  </head>
-  <body>
-<!-- <a href='#' id='show'> Click to show </a> | 
+<body>
+  <!-- <a href='#' id='show'> Click to show </a> | 
 <a href='#' id='hide'> Click to hide </a> -->
-<a href='#' id='grow'> Grow</a> |
-<a href='#' id='move'> Move </a> |
-<a href='#' id='bigger'> Bigger</a> |
-<a href='#' id='many'> Many Things </a> |
-<div id='textBox' > <p>gdfgfddgdfgdfg dfdsfdsf</p> </div>
-  </body>
+
+  <div id='textBox'>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, qui ullam,
+      aliquam voluptas quas maxime iure facilis aut suscipit excepturi vitae, eligendi perspiciatis incidunt sunt odio
+      iste nostrum sint repudiandae?
+    </p>
+    <p id='headerTop'>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, qui ullam,
+      aliquam voluptas quas maxime iure facilis aut suscipit excepturi vitae, eligendi perspiciatis incidunt sunt odio
+      iste nostrum sint repudiandae?
+    </p>
+    <p id='greenBorder'>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, qui ullam,
+      aliquam voluptas quas maxime iure facilis aut suscipit excepturi vitae, eligendi perspiciatis incidunt sunt odio
+      iste nostrum sint repudiandae?
+    </p>
+  </div>
+</body>
+
 </html>
