using jquery to filter styles, not sure whats wrong with doing this in css but anyway

--- a/events.html
+++ b/events.html
@@ -89,11 +89,13 @@
       //   $("#textBox").animate({ fontSize: "40px", backgroundColor: "red", marginLeft: "300px;", width: "600px" }, 2000)
       // })
 
-      $("p").css("border", "3px solid red")
+      // $("p").css("border", "3px solid red")
 
-      $("#headerTop").css("border", "1px dotted blue")
+      // $("#headerTop").css("border", "1px dotted blue")
 
-      $("#greenBorder").css("border", "2px dashed green")
+      $("#container p:even").css("border", "2px solid green")
+
+
     })
   </script>
 
@@ -117,18 +119,23 @@
   <!-- <a href='#' id='show'> Click to show </a> | 
 <a href='#' id='hide'> Click to hide </a> -->
 
-  <div id='textBox'>
+  <div id='container'>
     <p>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, qui ullam,
       aliquam voluptas quas maxime iure facilis aut suscipit excepturi vitae, eligendi perspiciatis incidunt sunt odio
       iste nostrum sint repudiandae?
     </p>
-    <p id='headerTop'>
+    <p>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, qui ullam,
       aliquam voluptas quas maxime iure facilis aut suscipit excepturi vitae, eligendi perspiciatis incidunt sunt odio
       iste nostrum sint repudiandae?
     </p>
-    <p id='greenBorder'>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, qui ullam,
+      aliquam voluptas quas maxime iure facilis aut suscipit excepturi vitae, eligendi perspiciatis incidunt sunt odio
+      iste nostrum sint repudiandae?
+    </p>
+    <p>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, qui ullam,
       aliquam voluptas quas maxime iure facilis aut suscipit excepturi vitae, eligendi perspiciatis incidunt sunt odio
       iste nostrum sint repudiandae?
