using selectors with a bit more depth

--- a/events.html
+++ b/events.html
@@ -93,8 +93,13 @@
 
       // $("#headerTop").css("border", "1px dotted blue")
 
-      $("#container p:even").css("border", "2px solid green")
+      // $("#container p:even").css("border", "2px solid green")
 
+      //  $("div > p").css("border", "2px solid blue")
+
+      // $("div > p.fourth-para").css("border", "2px solid blue")
+
+      $("#box > ul").css("border", "2px solid blue")
 
     })
   </script>
@@ -118,7 +123,16 @@
 <body>
   <!-- <a href='#' id='show'> Click to show </a> | 
 <a href='#' id='hide'> Click to hide </a> -->
-
+<p>
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, qui ullam,
+  aliquam voluptas quas maxime iure facilis aut suscipit excepturi vitae, eligendi perspiciatis incidunt sunt odio
+  iste nostrum sint repudiandae?
+</p>
+<p>
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, qui ullam,
+  aliquam voluptas quas maxime iure facilis aut suscipit excepturi vitae, eligendi perspiciatis incidunt sunt odio
+  iste nostrum sint repudiandae?
+</p>
   <div id='container'>
     <p>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, qui ullam,
@@ -135,12 +149,47 @@
       aliquam voluptas quas maxime iure facilis aut suscipit excepturi vitae, eligendi perspiciatis incidunt sunt odio
       iste nostrum sint repudiandae?
     </p>
-    <p>
+    <p class='fourth-para'>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, qui ullam,
       aliquam voluptas quas maxime iure facilis aut suscipit excepturi vitae, eligendi perspiciatis incidunt sunt odio
       iste nostrum sint repudiandae?
     </p>
   </div>
+
+
+  <div id='box'>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, qui ullam,
+      aliquam voluptas quas maxime iure facilis aut suscipit excepturi vitae, eligendi perspiciatis incidunt sunt odio
+      iste nostrum sint repudiandae?
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, qui ullam,
+      aliquam voluptas quas maxime iure facilis aut suscipit excepturi vitae, eligendi perspiciatis incidunt sunt odio
+      iste nostrum sint repudiandae?
+    </p>
+    <p class='last'>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, qui ullam,
+      aliquam voluptas quas maxime iure facilis aut suscipit excepturi vitae, eligendi perspiciatis incidunt sunt odio
+      iste nostrum sint repudiandae?
+    </p>
+    <ul>
+      <li><a href='home'>5</a></li>
+      <li><a href='home'>6</a></li>
+      <li><a href='home'>7</a></li>
+      <li><a href='home'>8</a></li>
+    </ul>
+
+  </div>
+
+  <ul>
+    <li><a href='home'>1</a></li>
+    <li><a href='home'>2</a></li>
+    <li><a href='home'>3</a></li>
+    <li><a href='home'>4</a></li>
+  </ul>
+
+
 </body>
 
 </html>
