selecting specific content via selectors, stuff to bear in mind

--- a/events.html
+++ b/events.html
@@ -99,7 +99,12 @@
 
       // $("div > p.fourth-para").css("border", "2px solid blue")
 
-      $("#box > ul").css("border", "2px solid blue")
+      // $("#box > ul").css("border", "2px solid blue")
+
+      // $("p:contains('Lorem')").css("border", "1px solid red")
+      // $("p:last-of-type").css("border", "1px solid red")
+
+      // $("p:nth-child(2)").css("border", "1px solid red")
 
     })
   </script>
